--- a/Kursova/Kursova.csproj
+++ b/Kursova/Kursova.csproj
@@ -142,7 +142,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controller\" />
-    <Folder Include="img\" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="View\UserControls\GrayTextBlock.xaml">
@@ -185,6 +184,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\user.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
